[gd_scene load_steps=6 format=2]

[ext_resource path="res://walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://safePlate.tscn" type="PackedScene" id=3]
[ext_resource path="res://levelClearPlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://game.gd" type="Script" id=5]

[node name="level1" type="Node2D"]
script = ExtResource( 5 )

[node name="levelClearPlate" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 96 )

[node name="gameTiles" type="Node2D" parent="."]

[node name="safePlate" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 96, 64 )

[node name="safePlate11" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 96, 96 )

[node name="safePlate16" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 32, 96 )

[node name="safePlate17" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 64, 96 )

[node name="safePlate12" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 128, 96 )

[node name="safePlate13" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 160, 96 )

[node name="safePlate14" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 192, 64 )

[node name="safePlate15" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 160, 64 )

[node name="safePlate2" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 128, 64 )

[node name="safePlate3" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 64, 64 )

[node name="safePlate4" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 32, 64 )

[node name="safePlate5" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 192, 32 )

[node name="safePlate6" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 160, 32 )

[node name="safePlate7" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 128, 32 )

[node name="safePlate8" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 96, 32 )

[node name="safePlate9" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 64, 32 )

[node name="safePlate10" parent="gameTiles" instance=ExtResource( 3 )]
position = Vector2( 32, 32 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65536, 0, 0, 65543, 0, 0, 131072, 0, 0, 131079, 0, 0, 196608, 0, 0, 196615, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0 )
