[gd_scene load_steps=6 format=2]

[ext_resource path="res://safePlate.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://levelClearPlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://game.gd" type="Script" id=5]

[node name="level2" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65536, 0, 0, 65543, 0, 0, 131072, 0, 0, 131075, 0, 0, 131079, 0, 0, 131080, 0, 0, 196608, 0, 0, 196611, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 262144, 0, 0, 262147, 0, 0, 262153, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327689, 0, 0, 393218, 0, 0, 393225, 0, 0, 458754, 0, 0, 458756, 0, 0, 458761, 0, 0, 524290, 0, 0, 524297, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[node name="levelClearPlate" parent="." instance=ExtResource( 4 )]
position = Vector2( 128, 160 )

[node name="gameTiles" type="Node2D" parent="."]

[node name="safePlate" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 32, 32 )

[node name="safePlate36" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 224, 224 )

[node name="safePlate39" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 224 )

[node name="safePlate2" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 256 )

[node name="safePlate37" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 224, 256 )

[node name="safePlate38" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 256 )

[node name="safePlate3" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 256 )

[node name="safePlate4" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 96, 256 )

[node name="safePlate5" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 224 )

[node name="safePlate6" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 96, 224 )

[node name="safePlate7" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 96, 192 )

[node name="safePlate8" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 192 )

[node name="safePlate9" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 192 )

[node name="safePlate10" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 192 )

[node name="safePlate11" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 224, 192 )

[node name="safePlate12" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 256, 256 )

[node name="safePlate13" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 256, 224 )

[node name="safePlate14" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 256, 192 )

[node name="safePlate15" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 256, 160 )

[node name="safePlate16" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 256, 128 )

[node name="safePlate17" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 224, 128 )

[node name="safePlate18" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 128 )

[node name="safePlate19" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 128 )

[node name="safePlate20" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 128 )

[node name="safePlate21" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 96 )

[node name="safePlate22" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 64 )

[node name="safePlate23" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 64 )

[node name="safePlate24" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 64 )

[node name="safePlate25" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 192, 32 )

[node name="safePlate26" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 160, 32 )

[node name="safePlate27" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 128, 32 )

[node name="safePlate28" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 96, 32 )

[node name="safePlate29" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 64, 128 )

[node name="safePlate30" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 32, 128 )

[node name="safePlate31" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 64, 96 )

[node name="safePlate32" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 32, 96 )

[node name="safePlate33" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 64, 64 )

[node name="safePlate34" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 32, 64 )

[node name="safePlate35" parent="gameTiles" instance=ExtResource( 1 )]
position = Vector2( 64, 32 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )
